ui: update app name

--- a/src/ui/component/generic/AppLogo.pug
+++ b/src/ui/component/generic/AppLogo.pug
@@ -2,7 +2,7 @@ script.
 	export size = 'medium'
 
 a.app-logo(class='app-logo-size-{size}' href='/')
-	img.app-logo-graphic(alt='Arc logo icon' src='/brand_triangle.svg')
+	img.app-logo-graphic(alt='App logo icon' src='/brand_triangle.svg')
 
 style.
 	.app-logo-graphic
