--- a/src/ui/component/layout/LayoutPost.pug
+++ b/src/ui/component/layout/LayoutPost.pug
@@ -26,8 +26,8 @@ script.
 
 menu#app-global-navigation
 	a#app-home-link(href='/')
-		img#app-logo-dark(alt='Arc logo' src='/brand_triangle_dark.svg')
-		img#app-logo-light(alt='Arc logo' src='/brand_triangle_light.svg')
+		img#app-logo-dark(alt='App logo' src='/brand_triangle_dark.svg')
+		img#app-logo-light(alt='App logo' src='/brand_triangle_light.svg')
 	menu#app-account-management
 		{#if api.isLoggedIn()}
 			AccountLogoutButton
