--- a/src/ui/component/post/PostFlair.pug
+++ b/src/ui/component/post/PostFlair.pug
@@ -36,18 +36,18 @@ span.post-flair(style="background-color: {background_color}; color: {HexColor.li
 style.
 	.post-flair
 		align-items center
-		border-radius 5px
+		border-radius 99px
 		display inline-flex
 		font-feature-settings 'calt', 'cpsp'
 		font-size 10px
 		font-weight var(--f-wght-strong)
 		gap 5px
-		letter-spacing 0.666px
+		letter-spacing 1px
 		line-height 1
 		height 20px
 		max-width 100%
 		overflow hidden
-		padding 0 6px
+		padding 0 0.666rem
 		text-transform uppercase
 		user-select none
 		white-space nowrap
