--- a/src/ui/component/post/PostTag.pug
+++ b/src/ui/component/post/PostTag.pug
@@ -15,15 +15,15 @@ data.post-tag(class='post-tag-{name}' title={description}) {name}
 style.
 	.post-tag
 		align-items center
-		border-radius 5px
+		border-radius 99px
 		display inline-flex
 		font-feature-settings 'calt', 'cpsp'
 		font-size 10px
 		font-weight var(--f-wght-strong)
-		letter-spacing 0.666px
+		letter-spacing 1px
 		line-height 1
 		height 20px
-		padding 0 6px
+		padding 0 0.666rem
 		text-transform uppercase
 		user-select none
 		white-space nowrap
