--- a/src/ui/component/subreddit/SubredditWidget.pug
+++ b/src/ui/component/subreddit/SubredditWidget.pug
@@ -70,6 +70,7 @@ style.
 	.subreddit-widget-image
 		background var(--c-blend-weak)
 		border-radius 1.333em
+		max-width 320px
 	.subreddit-widget-link
 		margin-top 0.333em
 	.subreddit-widget-post-flairs
