--- a/src/ui/component/feed/Feed.pug
+++ b/src/ui/component/feed/Feed.pug
@@ -68,6 +68,7 @@ script.
 			else null
 	items = []
 	read = []
+	selected_post = null
 
 	load_next_page = ->
 		if sort == 'search' and !search_text
@@ -91,6 +92,8 @@ script.
 						else false
 					current_page = current_page + 1
 		)
+	select_post = (id) ->
+		selected_post = id
 
 	load_next_page()
 
@@ -104,7 +107,7 @@ nav.feed(class="feed-type-{type.split('_').at(-1)}")
 				{#each items as item, i (item)}
 					{#if filter !== 'unread' || !read[i]}
 						<!-- svelte-ignore a11y-no-noninteractive-element-interactions -->
-						li.feed-item(on:mousedown={e => { if(e.button === 0) { read[i] = true; read = read } }})
+						li.feed-item
 							{#if type.endsWith('comments')}
 								Comment(id={item?.id || item} out_of_context={true})
 							{:else if type.endsWith('messages')}
@@ -113,8 +116,7 @@ nav.feed(class="feed-type-{type.split('_').at(-1)}")
 								{:else}
 									Message(message={item})
 							{:else if type.endsWith('posts')}
-								a.feed-post-link(href={format_url({ collection_id, feed_filter: filter, feed_search_sort: search_sort, feed_search_text: search_text, feed_sort: sort, feed_time_range: time_range === 'all' ? null : time_range, multireddit_name, post_id: item, subreddit_name, user_name })})
-									Post(expanded={false} id={item} out_of_context={type !== 'subreddit_posts'})
+								Post(id={item} selected={selected_post === item} set_selected={() => select_post(item)})
 							{:else if type.endsWith('subreddits')}
 								a(href={format_url({ subreddit_name: item })})
 									FeedLink(subreddit_name={item} type='subreddit')
@@ -123,7 +125,7 @@ nav.feed(class="feed-type-{type.split('_').at(-1)}")
 		{#if has_next_page}
 			menu.feed-items-actions
 				Label(text={error ? 'Error: ' + (error.reason || error.message) : ''})
-					Button(action={() => load_next_page()} loading={loading} text={error ? 'Retry' : 'More'})
+					Button(action={() => load_next_page()} loading={loading} text={error ? 'Retry' : 'Page ' + (current_page + 1)})
 	{:else}
 		{#if loading}
 			.feed-loading Loading...
@@ -144,13 +146,12 @@ style.
 		border-radius 1.333em
 		display flex
 		flex-flow column nowrap
-		gap 0.666em
-		.feed-type-comments &
-			gap 1.333em
+		gap 2.666em
 	.feed-items-actions
 		display flex
 		flex-flow row wrap
 		gap 1ch
+		padding 1.333em
 		width 100%
 	.feed-loading
 		color var(--c-text-weak)
