ui: fix small errors in demo mode popup

--- a/code/assets/stylesheets/global.styl
+++ b/code/assets/stylesheets/global.styl
@@ -303,7 +303,7 @@ input[type='text']
 summary
 	background var(--c-shade-weak)
 	border-radius 11px
-	display inline-flex
+	display inline-block
 	margin 1em 0 0
 	padding 3px 9px
 
