ui: fix rare overflow in user/score display

--- a/code/views/comment/Comment.pug
+++ b/code/views/comment/Comment.pug
@@ -173,6 +173,7 @@ style.
 		gap 0.5em
 		max-width 100%
 		padding 0.333em
+		white-space nowrap
 	.comment-replies
 		border-left 1px solid var(--c-text-xfaint)
 		margin 0.333em 0
