--- a/code/views/post/Post.pug
+++ b/code/views/post/Post.pug
@@ -342,6 +342,7 @@ style.
 		display flex
 		gap 0.5em
 		max-width 100%
+		white-space nowrap
 	.post-predictions
 		display flex
 		flex-flow column nowrap
